apps/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: portfolio-rebalancer-service
      port:
        number: 80
  rules:
    - host: portfolio-rebalancer.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-rebalancer-service
                port:
                  number: 80
